# AIHound

./: AIHound-Overview.md  BLOODHOUND_GUIDE.md  CONTRIBUTING.md  Full-Technical-Doc.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  register_ai_nodes.py  requirements.txt
Other Versions/: README.md
Other Versions/Go/: go.mod  go.sum
Other Versions/Go/bloodhound/: client.go  data.go
Other Versions/Go/core/: mcp.go  permissions.go  permissions_unix.go  permissions_windows.go  platform.go  redactor.go  scanner.go
Other Versions/Go/mcpserver/: server.go
Other Versions/Go/notifications/: notifications.go
Other Versions/Go/output/: html.go  json.go  opengraph.go  paths.go  table.go  watch_formatters.go
Other Versions/Go/remediation/: remediation.go
Other Versions/Go/scanners/: aider.go  amazon_q.go  browser_sessions.go  chatgpt.go  claude_code.go  claude_desktop.go  claude_sessions.go  cline.go  continue_dev.go  cursor.go  docker.go  envvars.go  gemini.go  git_credentials.go  github_copilot.go  huggingface.go  jupyter.go  lm_studio.go  ml_platforms.go  network_exposure.go  ollama.go  openai_cli.go  openclaw.go  persistent_env.go  powershell.go  registry.go  remediation_helpers.go  shell_history.go  shell_rc.go  vscode_extensions.go  windsurf.go
Other Versions/Go/utils/: credman_other.go  errors.go  (+3 more)
Other Versions/pyinstaller/: aihound.spec  build.py
aihound/: __init__.py  __main__.py  bloodhound.py  cli.py  mcp_server.py  notifications.py  remediation.py  watch.py
aihound/core/: mcp.py  permissions.py  platform.py  redactor.py  scanner.py
aihound/output/: html_report.py  json_export.py  opengraph_export.py  table.py  watch_formatters.py
aihound/scanners/: __init__.py  aider.py  amazon_q.py  browser_sessions.py  chatgpt.py  claude_code.py  claude_desktop.py  claude_sessions.py  cline.py  continue_dev.py  cursor.py  docker.py  envvars.py  gemini.py  git_credentials.py  github_copilot.py  huggingface.py  jupyter.py  lm_studio.py  ml_platforms.py  network_exposure.py  ollama.py  openai_cli.py  openclaw.py  persistent_env.py  powershell.py  shell_history.py  shell_rc.py  vscode_extensions.py  windsurf.py
aihound/utils/: credman.py  keychain.py  vscdb.py
docs/: AIHound-Overview.md  BLOODHOUND_GUIDE.md  Full-Documentation.md  cypher_queries.cy
pyinstaller/: aihound.spec  requirements.txt
tests/: test_mcp_parser.py  test_mcp_server.py  test_permissions.py  test_persistent_env.py  test_platform.py  test_redactor.py  test_remediation_hints.py  test_scanner_registry.py  test_shell_history.py  test_shell_rc.py  test_watch_diff.py
tests/fixtures/: claude_desktop_config.json  continue_config.json  credentials.json
(+5 files in other folders)
