[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aihound"
version = "0.1.0"
description = "AIHound - AI Credential & Secrets Scanner"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Darryl Baker"},
]
keywords = ["security", "credentials", "ai", "llm", "mcp", "aihound"]

[project.optional-dependencies]
pretty = ["rich>=13.0"]

[project.scripts]
aihound = "aihound.cli:main"

[tool.setuptools.packages.find]
include = ["aihound*"]
