[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aihound"
version = "3.0.0"
description = "AIHound - AI Credential & Secrets Scanner"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Darryl Baker"},
]
keywords = ["security", "credentials", "ai", "llm", "mcp", "aihound"]

[project.optional-dependencies]
pretty = ["rich>=13.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
aihound = "aihound.cli:main"

[tool.setuptools.packages.find]
include = ["aihound*"]
